<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_percent_mix"
        android:id="@+id/textView"
        android:fontFamily="sans-serif-condensed"/>

    <View
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="@color/orange"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/default_percent"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:background="@drawable/cframe2"
        android:paddingLeft="@dimen/box_vertical_padding"
        android:paddingTop="@dimen/box_horizontal_padding"
        android:paddingRight="@dimen/box_vertical_padding"
        android:paddingBottom="@dimen/box_horizontal_padding"
        android:layout_marginTop="@dimen/spacer"
        android:layout_marginBottom="@dimen/spacer"
        android:textColor="@color/orange"/>

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:max="50"
        android:progress="20"
        android:layout_marginBottom="@dimen/spacer"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_gasoline"
        android:id="@+id/textView3"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="@dimen/spacer"/>

    <View
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="@color/orange"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacer"
        android:layout_marginBottom="@dimen/spacer"
        android:background="@drawable/cframe2"
        android:paddingLeft="@dimen/box_vertical_padding"
        android:paddingTop="@dimen/box_horizontal_padding"
        android:paddingRight="@dimen/box_vertical_padding"
        android:paddingBottom="@dimen/box_horizontal_padding"
        android:text="@string/default_gasoline"
        android:textStyle="bold"
        android:textColor="@color/orange"/>

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar2"
        android:max="200"
        android:progress="50"
        android:layout_marginBottom="@dimen/spacer"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView6"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/title_mix"
        android:layout_marginTop="@dimen/spacer"/>

    <View
        android:layout_height="2dp"
        android:layout_width="fill_parent"
        android:background="@color/orange"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView5"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacer"
        android:layout_marginBottom="@dimen/spacer"
        android:background="@drawable/cframe2"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:paddingLeft="@dimen/box_vertical_padding"
        android:paddingTop="@dimen/box_horizontal_padding"
        android:paddingRight="@dimen/box_vertical_padding"
        android:paddingBottom="@dimen/box_horizontal_padding"/>

</LinearLayout>